--- a/public/examples.html
+++ b/public/examples.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="css/normalize-3.0.0.min.css" />
   <link rel="stylesheet" href="css/site.css" />
   <link rel="stylesheet" href="css/crazytable-dev.css" />
-  <!-- use Source Code Pro font for the example code -->
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
 </head>
 <body class="body-b376b">
 
@@ -17,7 +18,7 @@
   <a href="index.html" class="link-c1350 left-6ae92">crazytable.js</a>
   <a href="download.html" class="link-c1350 right-5b016">Download</a>
   <a href="docs.html" class="link-c1350 right-5b016">Docs</a>  
-  <a href="examples.html" class="link-c1350 right-5b016">Examples</a>
+  <a href="examples.html" class="link-c1350 right-5b016">&raquo; Examples</a>
   <a href="index.html" class="link-c1350 right-5b016">Home</a>
   <div class="clearfix-2e227"></div>
 </div><!-- end .body-width-6bc76 -->
@@ -26,12 +27,12 @@
 <div class="body-width-6bc76 main-f7281">
 <div class="left-a4262" id="examplesNavContainer"></div>
 <div class="right-554f2">
-  <h1 id="exampleName"></h1>
+  <h1 id="exampleName" class="header-4709c"></h1>
   <p id="exampleDescription"></p>
   <div id="exampleHTML1"></div>
-  <h2 class="">JavaScript</h2>
+  <h2 class="header-ae295">JavaScript</h2>
   <pre id="exampleJS" class="prettyprint"></pre>
-  <h2 class="">HTML</h2>
+  <h2 class="header-ae295">HTML</h2>
   <pre id="exampleHTML2" class="prettyprint"></pre>
 </div>
 <div class="clearfix-2e227"></div>
