--- a/public/examples.html
+++ b/public/examples.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/normalize-3.0.0.min.css" />
   <link rel="stylesheet" href="css/site.css" />
   <link rel="stylesheet" href="css/crazytable-dev.css" />
+  <!-- TODO: bring these in locally -->
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
 </head>
