saving state; updated examples

--- a/public/examples.html
+++ b/public/examples.html
@@ -42,7 +42,7 @@
 <div class="body-width-6bc76">
   <div class="left-ee342">
     <p class="p-0b9e9">crazytable.js is released under the <a href="" class="link-d2e2c">MIT License</a></p>
-    <p class="p-0b9e9"><a href="" class="link-d2e2c">GitHub</a></p>
+    <p class="p-0b9e9"><a href="https://github.com/oakmac/crazytablejs" class="link-d2e2c" target="_blank">GitHub</a></p>
   </div>
   <div class="right-a04bd">
     <a href="index.html" class="nav-link-5db48">Home</a>
